frontend/src/assets/styles/index.scss
@import './form.scss';
@import './fonts.scss';
@import './buttons.scss';
@import './placeholders';
@import './variables';
@import './mixins';

* {
  box-sizing: border-box;
  //   text-decoration: none;
  //   list-style: none;
  color: $black;
  padding: 0;
  margin: 0;

  &:focus-visible {
    outline: 2px solid -webkit-focus-ring-color;
    outline-offset: 0.1rem;
  }
}

.tiptap,
.post-details-content {
  u {
    text-decoration: underline;
  }

  s {
    text-decoration: line-through;
  }

  ul {
    padding-left: 1rem;

    li {
      list-style-type: disc;
    }
  }

  ol {
    padding-left: 1rem;

    li {
      list-style-type: decimal;
    }
  }

  blockquote {
    border-left: 2px solid $black;
    padding-left: 1rem;
    margin-left: 0;
  }

  h3 {
    margin: 1rem 0;
  }

  p {
    margin-bottom: 0.5rem;
  }

  p.is-editor-empty:first-child::before {
    font-size: 0.875rem;
    font-weight: normal;
    color: #999;
    content: attr(data-placeholder);
    float: left;
    height: 0;
    pointer-events: none;
  }
}

body {
  font-family: $primary-font-stack;
  font-size: $default-font-size;
  font-weight: normal;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: $secondary-font-stack;
  font-weight: 600;
}

h1 {
  font-size: $h1-font-size;
}

h2 {
  font-size: $h2-font-size;
}

h3 {
  font-size: $h3-font-size;
}

h4 {
  font-size: $h4-font-size;
}

h5 {
  font-size: $h5-font-size;
}

h6 {
  font-size: $h6-font-size;
}

.main-title {
  font-size: clamp(1.25rem, 2vw + 1rem, $main-title-font-size);
}

